# edge-wsgi

./: HISTORY.rst  README.rst  edge_wsgi.py  pyproject.toml  setup.cfg  setup.py
edge_wsgi/: edge_wsgi.py
edge_wsgi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_edge_wsgi.py
